# Big_Rover

./: Assignment12.html  Assignment12.ipynb  Assignment13.html  assignment12.md  data.mat  data_go.mat  data_turn.mat  ekf_sensor_fusion.ipynb  imu_tag.asv  imu_tag.m  imu_test.m  imu_test.mat  kalman_vel_pos.m  kalman_vel_pos.txt  tune_2rd.py  wheeled_kinematics.html  wheeled_kinematics.ipynb  火星车_4_22.pptx
.history/: assignment12_20230421071335.md  assignment12_20230421071808.md  assignment12_20230421071832.md  assignment12_20230421072045.md  assignment12_20230421072240.md  assignment12_20230421072246.md  assignment12_20230421072732.md  assignment12_20230421072741.md  assignment12_20230421072804.md  assignment12_20230421072812.md  assignment12_20230421073155.md  assignment12_20230421073205.md  assignment12_20230421073504.md  assignment12_20230421074446.md  assignment12_20230421074602.md  assignment12_20230421074628.md  assignment12_20230421074633.md
AprilTag/: AprilTag.md  apriltag_distance.py  camera_calibrate.py  test_apriltag.py  test_camera.py
AprilTag/april_tag/devel/: .catkin  _setup_util.py  local_setup.sh
AprilTag/april_tag/devel/lib/april_tag_pose/: pose_estimation  test_camera  test_pose
AprilTag/april_tag/devel/lib/pkgconfig/: april_tag_pose.pc  calibration.pc
AprilTag/april_tag/devel/share/april_tag_pose/cmake/: april_tag_poseConfig.cmake
AprilTag/april_tag/devel/share/calibration/cmake/: calibrationConfig.cmake
AprilTag/april_tag/src/april_tag_pose/: CMakeLists.txt  package.xml
AprilTag/april_tag/src/april_tag_pose/config/: my_pose_estimation.config.rviz
AprilTag/april_tag/src/april_tag_pose/launch/: pose_estimation.launch
AprilTag/april_tag/src/april_tag_pose/scripts/: imu_.py  pose_listener.py
AprilTag/april_tag/src/april_tag_pose/src/: camera.xml  open_cam.cpp  pose_estimation.cpp  test_camera.cpp  test_pose.cpp
AprilTag/april_tag/src/calibration/: CMakeLists.txt  package.xml
AprilTag/april_tag/src/calibration/src/: calibration-helper.hpp  camera.xml  camera_calibration  camera_calibration.cpp  default-chessboard.cfg  readme.md
AprilTag/img/calibrate/: calibrate.mat  parameters.npy
BY_Connect/BY_Connect/: BY_Connect.ini  BY_Connect.ini.backup
Carcontrol/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Carcontrol/devel/include/rover_control/: corner.h  rover.h
Carcontrol/devel/lib/pkgconfig/: rover_control.pc
Carcontrol/devel/lib/python3/dist-packages/rover_control/msg/: __init__.py  _corner.py  _rover.py
Carcontrol/devel/lib/rover_control/: rover_control  spawn_turtle  test_listener
Carcontrol/devel/share/common-lisp/ros/rover_control/msg/: _package.lisp  _package_corner.lisp  _package_rover.lisp  corner.lisp  rover.lisp  rover_control-msg.asd
Carcontrol/devel/share/gennodejs/ros/rover_control/msg/: _index.js  corner.js  rover.js
Carcontrol/devel/share/roseus/ros/rover_control/: manifest.l
Carcontrol/devel/share/roseus/ros/rover_control/msg/: corner.l  rover.l
Carcontrol/devel/share/rover_control/cmake/: rover_control-msg-paths.cmake  rover_controlConfig.cmake
Carcontrol/src/rover_control/: CMakeLists.txt  package.xml
Carcontrol/src/rover_control/launch/: car_ctrl.launch
Carcontrol/src/rover_control/msg/: corner.msg
Carcontrol/src/rover_control/scripts/: joy_listener.py
Carcontrol/src/rover_control/src/: damp_.hpp  main_draft.cpp  msg_.hpp
